# ainakan-swift

./: README.md  meson.build
Ainakan/: Ainakan.h  ApplicationDetails.swift  AsyncOperation.swift  Bus.swift  ChildDetails.swift  CrashDetails.swift  CustomAuthenticationService.swift  Device.swift  DeviceManager.swift  EndpointParameters.swift  Icon+CGImage.swift  Info.plist  Marshal.swift  PortalMembership.swift  PortalService.swift  ProcessDetails.swift  Relay.swift  Runtime.swift  Script.swift  Session.swift  SignalConnection.swift  SpawnDetails.swift  generate-framework.py  meson.build
Ainakan/Ainakan_Private/: generate-modulemap.py  meson.build
Ainakan/GLib/: DateTime.swift  File.swift  IOStream.swift  MainLoop.swift  TimeZone.swift  TlsCertificate.swift  Type.swift  UUID.swift
Ainakan/JSONGLib/: JSONGLib.swift
tools/: detect-version.py
